--- a/environment.yml
+++ b/environment.yml
@@ -3,7 +3,7 @@
 #   $ conda env create -f environment.yml  # `mamba` works too for this command
 #   $ conda activate pytensor-dev
 #
-name: pytensor-ml
+name: pytensor_ml
 channels:
   - conda-forge
   - nvidia
