Simplify precommit hooks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ target-version = "py39"
 exclude = ["versioneer.py"]
 
 [tool.ruff.lint]
-select = ["D", "E", "F", "I", "UP", "W", "RUF"]
+select = ["D", "E", "F", "I", "UP", "W", "RUF", "TID252"]
 ignore = [
   "E501",
   "F841", # Local variable name is assigned to but never used
