--- a/conda_envs/pytensor_ml.yml
+++ b/conda_envs/pytensor_ml.yml
@@ -1,6 +1,6 @@
 # To use:
 #
-#   $ conda env create -f environment.yml  # `mamba` works too for this command
+#   $ conda env create -f conda_envs/pytensor_ml.yml  # `mamba` works too for this command
 #   $ conda activate pytensor-dev
 #
 name: pytensor_ml
