--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,8 +63,8 @@ filterwarnings = [
 
 [tool.ruff]
 line-length = 100
-target-version = "py39"
-exclude = ["versioneer.py"]
+target-version = "py312"
+exclude = ["versioneer.py", "setup.py", "_version.py"]
 
 [tool.ruff.lint]
 select = ["D", "E", "F", "I", "UP", "W", "RUF", "TID252"]
@@ -99,6 +99,3 @@ ignore = [
 
 [tool.ruff.lint.isort]
 lines-between-types = 1
-
-[tool.ruff.lint.extend-per-file-ignores]
-"pytensor_ml/_version.py" = ["D", "E", "F", "I", "UP", "W", "RUF"]
