--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,58 @@
+[build-system]
+requires = ["setuptools", "versioneer[toml]"]
+build-backend = "setuptools.build_meta"
+
+
+[project]
+name = "pytensor_ml"
+dynamic = ['version']
+description = "A(nother) deep learning library, built on top of Pytensor"
+authors = [{name="Jesse Grabowski", email='jessegrabowski@gmail.com'}, {name="Ricardo Vieira"}]
+license = { file = "LICENSE" }
+classifiers = [
+  "Development Status :: 2 - Pre-Alpha",
+  "Intended Audience :: Science/Research",
+  "Programming Language :: Python",
+  "Topic :: Scientific/Engineering",
+  "Operating System :: Microsoft :: Windows",
+  "Operating System :: POSIX",
+  "Operating System :: Unix",
+  "Operating System :: MacOS",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+]
+keywords = [
+  "neural network",
+  "deep learning",
+  "autograd",
+  "gradient descent",
+  "pymc"
+]
+
+dependencies = [
+  "pytensor",
+  "numpy"
+]
+
+[project.optional-dependencies]
+dev = [
+    "pre-commit",
+    "pytest",
+    "pytest-cov",
+    "versioneer",
+    "scikit-learn"
+]
+
+[tool.versioneer]
+VCS = "git"
+style = "pep440"
+versionfile_source = "pytensor_ml/_version.py"
+versionfile_build = "pytensor_ml/_version.py"
+tag_prefix = 'v'
+
+
 [tool.pytest.ini_options]
 minversion = "6.0"
 xfail_strict=true
@@ -8,15 +63,13 @@ filterwarnings = [
 
 [tool.ruff]
 line-length = 100
-target-version = "py39"
-exclude = ["versioneer.py"]
+target-version = "py312"
+exclude = ["versioneer.py", "setup.py", "_version.py"]
 
 [tool.ruff.lint]
-select = ["D", "E", "F", "I", "UP", "W", "RUF"]
-ignore-init-module-imports = true
+select = ["D", "E", "F", "I", "UP", "W", "RUF", "TID252"]
 ignore = [
-  "E501",
-  "F841", # Local variable name is assigned to but never used
+  "E501",  # Line too long
   "RUF001", # String contains ambiguous character (such as Greek letters)
   "RUF002", # Docstring contains ambiguous character (such as Greek letters)
   "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
@@ -46,9 +99,3 @@ ignore = [
 
 [tool.ruff.lint.isort]
 lines-between-types = 1
-
-[tool.ruff.lint.extend-per-file-ignores]
-"__init__.py" = [
-  "F401", # Module imported but unused
-  "F403", # 'from module import *' used; unable to detect undefined names
-]
