--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,8 +59,7 @@ minversion = "6.0"
 xfail_strict=true
 filterwarnings = [
     "error",
-    "ignore::DeprecationWarning",
-    "ignore::RuntimeWarning"]
+    "ignore:ArviZ is undergoing a major refactor:FutureWarning"]
 
 [tool.ruff]
 line-length = 100
