--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,8 @@ minversion = "6.0"
 xfail_strict=true
 filterwarnings = [
     "error",
-    "ignore:ArviZ is undergoing a major refactor:FutureWarning"]
+    'ignore:\nArviZ is undergoing a major refactor.*:FutureWarning',
+]
 
 [tool.ruff]
 line-length = 100
